--- a/style.css
+++ b/style.css
@@ -16,13 +16,14 @@ h1{
     color: #84A59D;
     height: 30px;
     font-size: 25px;
+    cursor: pointer;
 }
 .btn{
     color: #84A59D;
     height: 30px;
     background-color: white;
     border: 2px solid #84A59D;
-
+    cursor: pointer;
 }
 
 .facts{
